Autlizando layout MapPrincipalView

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcl-over-slf4j-1.7.6.jar=jcl-over-slf4j-1.7.6.jar
 file.reference.jxmapviewer2-2.2.jar=jxmapviewer2-2.2.jar
+file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\Dell\\Desktop\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
 file.reference.slf4j-api-1.7.6.jar=slf4j-api-1.7.6.jar
 includes=**
 jar.compress=false
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jxmapviewer.classpath}:\
     ${file.reference.jxmapviewer2-2.2.jar}:\
     ${file.reference.jcl-over-slf4j-1.7.6.jar}:\
-    ${file.reference.slf4j-api-1.7.6.jar}
+    ${file.reference.slf4j-api-1.7.6.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
