--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,19 +33,19 @@ dist.jar=${dist.dir}/JavaApplication31.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.1.3.jar=commons-logging-1.1.3.jar
 file.reference.jcl-over-slf4j-1.7.6.jar=jcl-over-slf4j-1.7.6.jar
-file.reference.jxmapviewer2-2.2.jar=jxmapviewer2-2.2.jar
-file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\Dell\\Desktop\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
+file.reference.jxmapviewer2-2.5.jar=jxmapviewer2-2.5.jar
 file.reference.slf4j-api-1.7.6.jar=slf4j-api-1.7.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.Mysql-connector-java-5.1.3.classpath}:\
     ${libs.jxmapviewer.classpath}:\
-    ${file.reference.jxmapviewer2-2.2.jar}:\
     ${file.reference.jcl-over-slf4j-1.7.6.jar}:\
     ${file.reference.slf4j-api-1.7.6.jar}:\
-    ${file.reference.mysql-connector-java-5.1.49.jar}
+    ${file.reference.jxmapviewer2-2.5.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
