--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.1.3.jar=commons-logging-1.1.3.jar
+file.reference.gson-2.8.2.jar=gson-2.8.2.jar
 file.reference.jcl-over-slf4j-1.7.6.jar=jcl-over-slf4j-1.7.6.jar
 file.reference.jxmapviewer2-2.5.jar=jxmapviewer2-2.5.jar
 file.reference.slf4j-api-1.7.6.jar=slf4j-api-1.7.6.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.jcl-over-slf4j-1.7.6.jar}:\
     ${file.reference.slf4j-api-1.7.6.jar}:\
     ${file.reference.jxmapviewer2-2.5.jar}:\
-    ${file.reference.commons-logging-1.1.3.jar}
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
