--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.1.3.jar=commons-logging-1.1.3.jar
+file.reference.commons-logging-1.1.3.jar-1=Libs\\commons-logging-1.1.3.jar
 file.reference.gson-2.8.2.jar=gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=Libs\\gson-2.8.2.jar
+file.reference.java-json.jar=Libs\\java-json.jar
 file.reference.jcl-over-slf4j-1.7.6.jar=jcl-over-slf4j-1.7.6.jar
+file.reference.jcl-over-slf4j-1.7.6.jar-1=Libs\\jcl-over-slf4j-1.7.6.jar
 file.reference.jxmapviewer2-2.5.jar=jxmapviewer2-2.5.jar
+file.reference.jxmapviewer2-2.5.jar-1=Libs\\jxmapviewer2-2.5.jar
+file.reference.mysql-connector-java-5.1.49-bin.jar=Libs\\mysql-connector-java-5.1.49-bin.jar
+file.reference.mysql-connector-java-5.1.49.jar=Libs\\mysql-connector-java-5.1.49.jar
+file.reference.org.apache.commons.io.jar=Libs\\org.apache.commons.io.jar
 file.reference.slf4j-api-1.7.6.jar=slf4j-api-1.7.6.jar
+file.reference.slf4j-api-1.7.6.jar-1=Libs\\slf4j-api-1.7.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +56,16 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.6.jar}:\
     ${file.reference.jxmapviewer2-2.5.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.jcl-over-slf4j-1.7.6.jar-1}:\
+    ${file.reference.jxmapviewer2-2.5.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar}:\
+    ${file.reference.slf4j-api-1.7.6.jar-1}:\
+    ${file.reference.java-json.jar}:\
+    ${file.reference.org.apache.commons.io.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
