--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ excludes=
 file.reference.commons-logging-1.1.3.jar-1=Libs\\commons-logging-1.1.3.jar
 file.reference.gson-2.8.2.jar-1=Libs\\gson-2.8.2.jar
 file.reference.jcl-over-slf4j-1.7.6.jar-1=Libs\\jcl-over-slf4j-1.7.6.jar
-file.reference.jxmapviewer2-2.5.jar-1=Libs\\jxmapviewer2-2.5.jar
+file.reference.jxmapviewer2-2.6.jar=Libs\\jxmapviewer2-2.6.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=Libs\\mysql-connector-java-5.1.49-bin.jar
 file.reference.mysql-connector-java-5.1.49.jar=Libs\\mysql-connector-java-5.1.49.jar
 file.reference.org.apache.commons.io.jar=Libs\\org.apache.commons.io.jar
@@ -47,11 +47,11 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.3.jar-1}:\
     ${file.reference.gson-2.8.2.jar-1}:\
     ${file.reference.jcl-over-slf4j-1.7.6.jar-1}:\
-    ${file.reference.jxmapviewer2-2.5.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
     ${file.reference.slf4j-api-1.7.6.jar-1}:\
-    ${file.reference.org.apache.commons.io.jar}
+    ${file.reference.org.apache.commons.io.jar}:\
+    ${file.reference.jxmapviewer2-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +64,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jxmapviewer2-2.6.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
